# rpg-taskboard

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_UI.md  CODE_REVIEW_V025.md  CODE_REVIEW_V028.md  CODE_REVIEW_WINDOW.md  FIX_REPORT.md  FIX_V025.md  README.md  UI_FIX_REPORT.md  UI_FIX_V028.md  VERIFICATION.md  VERIFICATION_V0.2.3.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: App.test.tsx  setup.ts  useTasks.test.ts  useXP.test.ts
src/components/: CompactWidget.tsx  ErrorBoundary.tsx  FullWidget.tsx  LevelBadge.tsx  MiniWidget.tsx  Overlay.tsx  SettingsPanel.tsx  TaskInput.tsx  TaskList.tsx  TitleBar.tsx  XPBar.tsx
src/hooks/: useSound.ts  useTasks.ts  useXP.ts
src/utils/: debounce.ts  tauri.ts
