[package]
name = "rpg-taskboard"
version = "0.1.0"
description = "A VPET-style RPG Task Board that lives in your screen corner"
authors = ["RPG Task Board Team"]
edition = "2021"

[lib]
name = "rpg_taskboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
