[package]
name = "rpg-taskboard"
version = "0.2.4"
description = "A VPET-style RPG Task Board that lives in your screen corner"
authors = ["RPG Task Board Team"]
homepage = "https://github.com/rpg-taskboard/rpg-taskboard"
repository = "https://github.com/rpg-taskboard/rpg-taskboard"
copyright = "Copyright (c) 2024 RPG Task Board Team. All rights reserved."
edition = "2021"

[lib]
name = "rpg_taskboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
